Login locator changed to validate page